ubuntu-dev-tools (0.139) UNRELEASED; urgency=low

  [ Stefano Rivera ]
  * syncpackage, backportpackage, sponsor-patch: Use -nc when building source
    packages. Avoids needing build-deps on the build machine.
  * sponsor-patch:
    - Determine the task from the UDD branch.
    - Support syncs of new packages.
    - Support syncs from a non-default series (LP: #931644)
  * Re-add dgetlp. Still needed for downloading source packages from +queue.
    (LP: #919805)
  * pbuilder-dist: Export DISTRIBUTION and ARCHITECTURE as well as DIST and
    ARCH. Thanks Alessio Treglia. (Closes: #659060, LP: #423609)
  * reverse-depends: Now that Debian is supported server-side:
    - Convert Debian release aliases to codenames.
    - Default to the devel release of the vendor distribution.

  [ Evan Broder]
  * sponsor-patch, requestsync, syncpackage: Add a config variable for -k
    arguments.

 -- Stefano Rivera <stefanor@debian.org>  Fri, 23 Dec 2011 22:33:17 +0200

ubuntu-dev-tools (0.138) unstable; urgency=low

  [ Benjamin Drung ]
  * sponsor-patch:
    - Use syncpackage instead of subscribing ubuntu-archive for sync requests,
      because syncpackage supports sponsorship now.
    - Check if the sponsored bug is marked as duplicate (LP: #896733).
    - Allow user to override sanity checks (LP: #896733).

  [ Stefano Rivera ]
  * Correct reference to qemu-user-static in pbuilder-dist.1 (Closes: #651999)
  * mk-sbuild: Don't install devscripts by default (LP: #904502)
  * backportpackage: Add --release-pocket option, rather than relying entirely
    on heuristics (Closes: #651546)
  * syncpackage: Mention sponsorship when closing bugs (LP: #904288)

 -- Benjamin Drung <bdrung@debian.org>  Wed, 21 Dec 2011 22:38:35 +0100

ubuntu-dev-tools (0.137) unstable; urgency=low

  [ Stefano Rivera ]
  * mk-sbuild: Make --eatmydata command line flag actually work.
  * Remove dgetlp. No longer needed.
  * Use httplib2 everywhere that we do https. The python stdlib doesn't do